# voxel-sampo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  logo.monopic
assets/: room.vox
src/: main.rs
src/camera/: components.rs  mod.rs  plugin.rs  systems.rs
src/config/: mod.rs
src/debug/: components.rs  mod.rs  plugin.rs  systems.rs
src/debug/systems/: composer.rs  core.rs  fps.rs  mod.rs  performance.rs  physics.rs  player.rs  world.rs
src/debug_ui/: mod.rs  plugin.rs
src/debug_ui/systems/: core.rs  fps.rs  mod.rs  performance.rs  physics.rs  player.rs  world.rs
src/entities/: bundles.rs  camera.rs  mod.rs  player.rs  world.rs
src/physics/: components.rs  mod.rs  plugin.rs  systems.rs
src/player/: components.rs  plugin.rs  systems.rs
src/spawn/: mod.rs
src/world/: components.rs  plugin.rs  systems.rs
