[package]
name = "voxel-sampo"
version = "0.1.0"
edition = "2021"
description = "A voxel-based scene with a camera that orbits around the scene."
repository = "https://github.com/m47ch4n/voxel-sampo"
license = "MIT"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_vox_scene = "0.13.0"
bevy_panorbit_camera = "0.14.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
