[package]
name = "voxel-sampo"
version = "0.1.0"
edition = "2021"
description = "A voxel-based 3D scene viewer built with the Bevy engine."
repository = "https://github.com/m47ch4n/voxel-sampo"
license = "MIT"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_vox_scene = "0.19.0"
bevy_rapier3d = "0.30.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
